test/scc/pp/errors/017.a
017.t:1:14: error: expected identifier